--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/forms": "^11.0.9",
     "@angular/google-maps": "^11.0.4",
     "@angular/material": "11.0.4",
+    "@angular/material-moment-adapter": "^12.2.2",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
