--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom"],
     "plugins": [{ "name": "tslint-language-service" }],
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
